<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5940B"
    tools:context=".Main24hr">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="223dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="84dp"
                android:layout_marginTop="44dp"
                android:text="@string/world_clock"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#CE0505"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="72dp"
                android:text="@string/sydney"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFEB3B"
                android:textStyle="bold"
                android:typeface="serif" />


            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:textColor="#CE0505"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="96dp"
                android:layout_height="78dp"
                android:layout_marginStart="28dp"
                android:contentDescription="@string/todo2"
                app:srcCompat="@drawable/opera" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="30dp"
                android:text="@string/paris"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFEB3B"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/date1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:typeface="serif"
                android:textColor="#CE0505"
                android:textStyle="bold"
                android:layout_marginStart="28dp"/>


            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="86dp"
                android:layout_height="80dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/paris"
                android:contentDescription="@string/parist" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="40dp"
                android:text="@string/london"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFEB3B"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/date2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:typeface="serif"
                android:textColor="#CE0505"
                android:textStyle="bold"
                android:layout_marginStart="28dp"/>

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="86dp"
                android:layout_height="80dp"
                android:layout_marginStart="28dp"
                app:srcCompat="@drawable/londoneye"
                android:contentDescription="@string/londeye" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="60dp"
                android:text="@string/bangkok"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFEB3B"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/date3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:typeface="serif"
                android:textColor="#CE0505"
                android:textStyle="bold"
                android:layout_marginStart="28dp"/>

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="86dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/buddha"
                android:layout_marginStart="28dp"
                android:contentDescription="@string/thailand" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="65dp"
                android:text="@string/seoul"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFEB3B"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/date4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:typeface="serif"
                android:textColor="#CE0505"
                android:textStyle="bold"
                android:layout_marginStart="28dp"/>

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="86dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/temple"
                android:layout_marginStart="28dp"
                android:contentDescription="@string/seoultemple" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>